Popup has drop shadow again. Spacing fixed between popup content and header. Height fixed on last popup content row.

--- a/app/styles/navigator.less
+++ b/app/styles/navigator.less
@@ -646,7 +646,7 @@ zoom: 1;*/
 // ========================================================================
 #popupContentWrapper .jspPane{
     width: 100% !important;
-    border-radius: @borderRadius;
+    border-radius: 8px;
     box-shadow: 0px 0px 10px @lightCharcoal;
 }
 
